--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               определиться с профессией предлагаем Вам пройти тест на
               профориентацию.
             </p>
-            <a href="#">Пройти тест!</a>
+            <a href="https://testometrika.com/business/which-profession-suits-me/">Пройти тест!</a>
           </div>
           <div class="banner_img">
             <img src="img/banner_img.jpg" alt="#" class="img-fluid" />
