--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <a class="nav-meny" href="#">Образование для абитуриентов</a>
             </li>
             <li><a class="nav-meny" href="#">Образование для взрослых</a></li>
-            <li><a class="nav-meny" href="#">Образование для школьников</a></li>
+            <li><a class="nav-meny" href="pages/kids.html">Образование для школьников</a></li>
           </ul>
         </nav>
       </div>
