--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header id="header" class="header">
       <div class="container">
         <div>
-          <img class="logo" src="img/logo.png" alt="Logo" />
+          <a href="/index.html"><img src="img/logo.png"  alt="Logo"></a>
         </div>
         <nav>
           <ul>
             <li>
               <a class="nav-meny" href="#">Образование для абитуриентов</a>
             </li>
-            <li><a class="nav-meny" href="#">Образование для взрослых</a></li>
+            <li><a class="nav-meny" href="pages/adults.html">Образование для взрослых</a></li>
             <li><a class="nav-meny" href="pages/kids.html">Образование для школьников</a></li>
           </ul>
         </nav>
