--- a/pages/kids.html
+++ b/pages/kids.html
@@ -30,15 +30,15 @@ function topFunction() {
     <header id="header" class="header">
         <div class="container">
           <div>
-            <img class="logo" src="img/logo.png" alt="Logo" />
+            <a href="/index.html"><img src="img/logo.png"  alt="Logo"></a>
           </div>
           <nav>
             <ul>
               <li>
                 <a class="nav-meny" href="#">Образование для абитуриентов</a>
               </li>
-              <li><a class="nav-meny" href="#">Образование для взрослых</a></li>
-              <li><a class="nav-meny" href="#">Образование для школьников</a></li>
+              <li><a class="nav-meny" href="adults.html">Образование для взрослых</a></li>
+              <li><a class="nav-meny" href="kids.html">Образование для школьников</a></li>
             </ul>
           </nav>
         </div>
@@ -81,6 +81,7 @@ function topFunction() {
                                     <div class="single_product_content">
                                         <h3><a href="https://www.tirascult.org/index.php?option=com_content&view=article&id=110&Itemid=482">МОУ ДО "ДМШ им. П.И.Чайковского"</a></h3>
                                         <br>
+                                        
                                         <h4>В школе функционирует пять отделений: специального фортепиано; оркестровых инструментов; 
                                             русских народных инструментов; общего фортепиано и аккомпанемента; музыкально-теоретических 
                                             дисциплин и отдел сольного пения. </h4>
