--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="https://img.icons8.com/material-outlined/50/000000/book-shelf.png"type="image/x-icon">
     <title>Куда пойти учиться?</title>
     <link rel="stylesheet" href="style.css" />
   </head>
