--- a/pages/kids.html
+++ b/pages/kids.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Куда пойти учиться?</title>
+    <link rel="shortcut icon" href="https://img.icons8.com/material-outlined/50/000000/book-shelf.png"type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
