--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
           <ul>
             <li>
-              <a class="nav-meny" href="#">Образование для абитуриентов</a>
+              <a class="nav-meny" href="pages/enrollee.html">Образование для абитуриентов</a>
             </li>
             <li><a class="nav-meny" href="pages/adults.html">Образование для взрослых</a></li>
             <li><a class="nav-meny" href="pages/kids.html">Образование для школьников</a></li>
