--- a/pages/adults.html
+++ b/pages/adults.html
@@ -36,7 +36,7 @@ function topFunction() {
           <nav>
             <ul>
               <li>
-                <a class="nav-meny" href="#">Образование для абитуриентов</a>
+                <a class="nav-meny" href="enrollee.html">Образование для абитуриентов</a>
               </li>
               <li><a class="nav-meny" href="adults.html">Образование для взрослых</a></li>
               <li><a class="nav-meny" href="kids.html">Образование для школьников</a></li>
@@ -54,15 +54,31 @@ function topFunction() {
         </section>
         <section class="single_product_list">
             <div class="toc">
-                <div>
                 <h3>Переподготовка и повышение квалификации</h3>
-                <ul>
-                 <li><a href="#t1">ПГУ им. Т.Г.Шевченко</a></li>
-                 <li><a href="#t2">Образовательный центр "Развитие"</a></li>
-                 <li><a href="#t3">Институт развития образования и повышения квалификации</a></li>
-                 <li><a href="#t4">ГОУ СПО "ТМК им. Л.А.Тарасевича"</a></li>
-                 <li><a href="#t5">Тираспольский учебно-профориентационный центр</a></li>
-                </ul>
+                <div class="dropdown">
+                    <button class="dropbtn"><a href="#t1">г.Тирасполь</a></button>
+                  </div>
+                  <div class="dropdown">
+                    <button class="dropbtn"><a href="#t2">г.Бендеры</a></button>
+                  </div>
+                  <div class="dropdown">
+                    <button class="dropbtn"><a href="#t3">г.Рыбница</a></button>
+                  </div>
+                  <div class="dropdown">
+                    <button class="dropbtn"><a href="#t4">г.Дубоссары</a></button>
+                  </div>
+                  <div class="dropdown">
+                    <button class="dropbtn"><a href="#t5">г.Каменка</a></button>
+                  </div>
+                  <div class="dropdown">
+                    <button class="dropbtn"><a href="#t6">г.Григориополь</a></button>
+                  </div>
+                  <div class="dropdown">
+                    <button class="dropbtn"><a href="#t7">г.Днестровск</a></button>
+                  </div>
+                  <div class="dropdown">
+                    <button class="dropbtn"><a href="#t8">г.Слободзея</a></button>
+                  </div>
                </div>
             </div>
 
@@ -70,7 +86,7 @@ function topFunction() {
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="single_product_iner" id="t1">
-                            <h1><a href="http://spsu.ru/university/struct/cpipkgs">Приднестровский государстввенный университет им. Т.Г.Шевченко</a></h1>
+                            <h1><a href="http://spsu.ru/university/struct/cpipkgs">Приднестровский государственный университет им. Т.Г.Шевченко</a></h1>
                             <div class="row align-items-center justify-content-between">
                                 <div class="col-lg-5 col-sm-6">
                                     <div class="single_product_content">
