--- a/pages/kids.html
+++ b/pages/kids.html
@@ -7,6 +7,11 @@
     <title>Куда пойти учиться?</title>
     <link rel="shortcut icon" href="https://img.icons8.com/material-outlined/50/000000/book-shelf.png"type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+    <script src="google-translate.js"></script>
+    <script src="//translate.google.com/translate_a/element.js?cb=TranslateInit"></script>
+    <style type="text/css">iframe.goog-te-banner-frame{ display: none !important;}</style>
+    <style type="text/css">body {position: static !important; top:0px !important;}</style>
 </head>
 <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Наверх!</button>
@@ -42,6 +47,11 @@ function topFunction() {
               <li><a class="nav-meny" href="kids.html">Образование для школьников</a></li>
             </ul>
           </nav>
+          <div class="language">
+            <img src="lang/lang__ru.png" alt="ru" data-google-lang="ru" class="language__img">
+            <img src="lang/lang__en.png" alt="en" data-google-lang="en" class="language__img">
+            <img src="lang/lang__de.png" alt="de" data-google-lang="de" class="language__img">
+         </div>
         </div>
       </header>
       <main>
